--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="to_bar"><a href="#ask1">Ask Me</a></div>
       </div>
     </div>
-    <h1>H!</h1>
+    <!-- <h1>H!</h1> -->
     <div id="h1">
       <div id="am">I'm</div>
       <div>
@@ -34,7 +34,8 @@
     <div id="cover"></div>
     <div id="about1">About Me</div>
     <div id="about">
-      <div id="info">
+      <div id="cv">
+        <div id="info">
         Creative, goal-oriented and hard working person capable of approaching
         tasks and problems with supreme skill and creativity. Highly proficient
         self-motivated individual with the ability to work under little
@@ -42,7 +43,35 @@
         skills especially in investigative processes. Ready to take on a
         challenge and eager to learn new things.
       </div>
-      <div id="profile-picture">
+      <div  class="profil-inf"><a href="#">Download my CV</a></div>
+      </div>
+      
+
+        <div id="container">
+      <div class="content">
+        <div class="me"></div>
+        <div class="image"><img src="2 (1).JPG" alt="Louis " /></div>
+        <div class="profile">
+          <div>
+            <iconify-icon
+              icon="healthicons:ui-user-profile"
+              hieght="40"
+              width="40"
+            ></iconify-icon>
+          </div>
+          <div>Louis Gadza</div>
+        </div>
+        <div class="profil-info">
+          <div>Creative, goal-oriented and hard working person.</div>
+          <div > Highly proficient
+        self-motivated individual.</div>
+        <div>Ready to take on a
+        challenge and eager to learn new things.</div>
+        </div>
+      </div>
+    </div>
+
+      <!-- <div id="profile-picture">
         <div id="louis">
           <img src="2 (2).JPG" alt="Louis" />
         </div>
@@ -61,7 +90,7 @@
             >
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <div>
       <div id="edu1">Education</div>
