--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
         <div id="container">
       <div class="content">
-        <div class="me"></div>
+        <div id="what"></div>
+        <!-- <div class="me"></div> -->
         <div class="image"><img src="2 (1).JPG" alt="Louis " /></div>
         <div class="profile">
           <div>
@@ -172,6 +173,7 @@
         <label for="email">Email</label>
         <input type="email" id="email" name="email" placeholder="siuolgadza@gmail.com"><br><br>
         <textarea name="text" id="" cols="80" rows="10" placeholder="Ask me any question"></textarea>
+        <input type="submit" id="submit">
     </div>
 </div>
  <div id="footer">
@@ -228,7 +230,7 @@
               id="email"
               placeholder="siuolgadza@gmail.com"
             /><br /><br />
-            <label for="textarea">Write you question bellow:</label>
+            <label for="textarea">Ask you question bellow:</label>
 
             <textarea
               id="textarea"
@@ -238,6 +240,7 @@
               rows="8"
               placeholder="Write To Us"
             ></textarea>
+            <input type="submit" id="submit1">
           </form>
         </div>
       </div>
