--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <label for="email">Email</label>
         <input type="email" id="email" name="email" placeholder="siuolgadza@gmail.com"><br><br>
         <textarea name="text" id="" cols="80" rows="10" placeholder="Ask me any question"></textarea>
-        <input type="submit" id="submit">
+        <!-- <input type="submit" id="submit"> -->
     </div>
 </div>
  <div id="footer">
